syntax = "proto3";

package auth;

option java_package = "com.wapgyj.common.proto";
option java_multiple_files = false;
option java_outer_classname = "AuthProto";

service AuthService {
  rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryResp) {}
  rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyResp) {}
  rpc GetIdFromToken (GetIdFromTokenReq) returns (GetIdFromTokenResp){}
}
message DeliverTokenReq {
  int32 user_id = 1;
}

message VerifyTokenReq {
  string token = 1;
}

message DeliveryResp {
  string token = 1;
}

message VerifyResp {
  bool res = 1;
}
message GetIdFromTokenReq{
  string token = 1;
}
message GetIdFromTokenResp{
  int32 user_id = 1;
}